src/core/stack.c
@@ -324,9 +324,12 @@ get_maximum_layer_in_group (MetaWindow *window)
     {
       MetaWindow *w = tmp->data;
 
-      layer = get_standalone_layer (w);
-      if (layer > max)
-        max = layer;
+      if (!w->override_redirect)
+        {
+          layer = get_standalone_layer (w);
+          if (layer > max)
+            max = layer;
+        }
       
       tmp = tmp->next;
     }
@@ -539,7 +542,8 @@ create_constraints (Constraint **constraints,
               MetaWindow *group_window = tmp2->data;
 
               if (!WINDOW_IN_STACK (group_window) ||
-                  w->screen != group_window->screen)
+                  w->screen != group_window->screen ||
+                  group_window->override_redirect)
                 {
                   tmp2 = tmp2->next;
                   continue;
